Adjust fixed sidebar wrapping

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -19,7 +19,7 @@
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    overflow-y: visible;
     position: fixed;
     padding-top: $masthead-height;
   }
@@ -196,6 +196,9 @@
   display: none;
   @media screen and (min-width: 1024px) {
     display: block;
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
   }
 }
 
@@ -305,6 +308,12 @@
 
   li {
     white-space: nowrap;
+  }
+
+  .sidebar & li {
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
   }
 
   a {
